Add Item classes to partially replace ItemMapping. Part 1?